--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,9 @@
 .z_index_4 {
   z-index: 4;
 }
+.pr_12{
+  padding-right: 12px;
+}
 .box_img {
   border-radius: 10px 10px 0px 0px;
   border: 1px solid rgba(0, 0, 0, 0.08);
@@ -36,6 +39,7 @@
   color: black;
   background: #fff;
   box-shadow: 3px 5px 22px 0px rgba(0, 0, 0, 0.08);
+  transition: 0.3s linear;
 }
 .product_btn:hover {
   background: #f40;
