--- a/assets/css/root.css
+++ b/assets/css/root.css
@@ -127,8 +127,8 @@
 .bg_black {
   background-color: var(--bg_black);
 }
-@media (max-width:576px) {
-   :root {
+@media (max-width: 576px) {
+  :root {
     /* font-size */
     --fs-sm: 16px;
     --fs-md: 18px;
@@ -148,6 +148,18 @@
     --fs-xl: 24px;
     --fs-xxl: 25px;
     --fs-3xl: 28px !important;
+    --fs-4xl: 10px;
+  }
+}
+@media (min-width: 1300px) and (max-width: 1400px) {
+  :root {
+    /* font-size */
+    --fs-sm: 16px;
+    --fs-md: 16px;
+    --fs-lg: 20px;
+    --fs-xl: 24px;
+    --fs-xxl: 25px;
+    --fs-3xl: 29px;
     --fs-4xl: 10px;
   }
 }
