--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,6 +122,9 @@
   border: 1px solid #e8e8e8;
   background: rgba(196, 196, 196, 0);
 }
+.top_3{
+  top: -3%;
+}
 .qty_btn {
   border: transparent;
   background-color: transparent;
